<resources>
    <string name="app_name">BookTracker</string>
    <string name="welcome">Welcome!</string>
    <string name="reading">Reading</string>
    <string name="read">Read</string>
    <string name="log_out">Log Out</string>
    <string name="is_admin">Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="to_be_read">To be Read</string>
    <string name="preference_file_key">bookTrackerPreferenceFileName</string>
    <string name="book_tracker">Book Tracker</string>
    <string name="create_account">Create Account</string>
    <string name="preference_usrt_key">PreferenceUserIDKeyBookTracker</string>
    <string name="preference_userId_key">preferenceUserIdKeyBookTracker</string>
    <string name="current_users">Current Users</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="write_your_review">Write your review</string>
    <string name="save">Save</string>
    <string name="book_information">Book information</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="book_info">Book Info</string>
    <string name="add_book">Add Book</string>
</resources>