<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/welcomeMessageTextView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:text="@string/is_admin"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/TBRButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:text="@string/to_be_read"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/readButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/read"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/TBRButton"
        app:layout_constraintTop_toBottomOf="@id/TBRButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/log_out"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>