<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_information"
        android:textSize="20sp"
        android:paddingBottom="16dp"
        android:id="@+id/displayTitleTextView" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:id="@+id/ratingBar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_review"
        android:importantForAutofill="no"
        android:minLines="4"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:id="@+id/reviewEditText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_marginTop="24dp"/>
</LinearLayout>

