<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_Reading"
        android:layout_width="300dp"

        android:layout_height="100dp"
        android:layout_marginStart="55dp"

        android:layout_marginTop="100dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="25dp"
        android:text="@string/reading"
        android:textSize="32sp"

        app:layout_constraintBottom_toTopOf="@+id/button_ToRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ToRead"
        android:layout_width="300dp"
        android:layout_height="100dp"

        android:layout_marginStart="55dp"

        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:text="@string/to_read"

        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Reading" />

    <Button
        android:id="@+id/button_Read"
        android:layout_width="300dp"
        android:layout_height="100dp"


        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="55dp"

        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:text="@string/read"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ToRead" />

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal|center_vertical"

        android:layout_marginStart="106dp"
        android:layout_marginTop="100dp"

        android:layout_marginEnd="106dp"
        android:layout_marginBottom="105dp"

        android:text="@string/log_out"
        android:textSize="26sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Read" />
</androidx.constraintlayout.widget.ConstraintLayout>